-- What's new for ???

Enhancements

* Added "mozillacal" as an option for the defaultcal preference to bring up the Mozilla calendar (although it doesn't go to the selected date yet)
* Moved the Computer and Reference searches into menu subcategories..  

-- What's new for 3.1.4.4 beta (October 24, 2002)

Modified Searches

* php - fix problem with spaces in URL (from Nikolai Devereaux)
* sf - add "/list" for jumping to a SourceForge hosted list info/admin page (from Glenn Carr)

Bug Fixes

* Popup menu fix - 'Configure' was showing up in the list of search categories

-- What's new for 3.1.4.3 beta (October 23, 2002)

New aliases

* dhr and w3r, from Glenn Carr and Will Dean

New Searches

* cheapcd - Buy Cheap CDs Online at Wholesale Cost, $5 under Retail (from Steven J. Heil)
* md5 - calculate an md-5 digest for a string (from Brent Beardsley)
* tgn - Search the Getty Thesaurus of Geographical Names (from Tim Aiello)
* arin - Search the Arin Whois database at www.arin.net/whois (from Tim Aiello)
* ubl - the Ultimate Band List by ArtistDirect (from Darren Greenberg)
* viam - Find a map to any place in Europe with viamichelin.com
* cowp - Search for lyrics and chords for country songs (from Brent Beardsley)
* egw - Search Ellen G. White's writings (from Brent Beardsley)
* ostk - Search Overstock.com for items (from Brent Beardsley)
* tinyurl - tinyurl.com is a link-shortening redirector (from Brent Beardsley)
* sl - Search StudyLight.org for verses and Hebrew and Greek words
* ebuy - Search ebuyer.com (from Matthew Slight)
* cpp - Search cppreference.com (from Matthew Slight)
* mathref - Search Mathworld.com (from Matthew Slight)
* ns - New Scientist (from Glenn Carr)

Modified Searches

* ascii - added link to www asciitable com so an ascii table will pop up if no parameters are specified
* multi - added ability to have multiple searches with different arguments and allow commas in arguments
* setiq - added delay parameter
* wpfr - reset persistent parameters